--- a/BestFlightSearch.Solution/BestFlightSearch.Solution.csproj
+++ b/BestFlightSearch.Solution/BestFlightSearch.Solution.csproj
@@ -54,7 +54,7 @@
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
     <Compile Include="Entity\Flight.cs" />
-    <Compile Include="Entity\FlightCompany.cs" />
+    <Compile Include="Entity\Company.cs" />
     <Compile Include="FlightSearchInfraero.cs" />
     <Compile Include="Interface\IFlightSearch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
