--- a/BestFlightSearch.Solution/BestFlightSearch.Solution.csproj
+++ b/BestFlightSearch.Solution/BestFlightSearch.Solution.csproj
@@ -34,10 +34,14 @@
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="RestSharp, Version=106.6.10.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
+      <HintPath>..\packages\RestSharp.106.6.10\lib\net452\RestSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -55,7 +59,12 @@
     </Compile>
     <Compile Include="Entity\Flight.cs" />
     <Compile Include="Entity\Company.cs" />
+    <Compile Include="Enum\SkyScannerIOMethod.cs" />
+    <Compile Include="Enum\SkyScannerIOResponseCodes.cs" />
+    <Compile Include="Enum\SkyScannerRapidApiMethod.cs" />
     <Compile Include="FlightSearchInfraero.cs" />
+    <Compile Include="FlightSearchRapidApiSkyScanner.cs" />
+    <Compile Include="FlightSearchSkyScannerIO.cs" />
     <Compile Include="Interface\IFlightSearch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
