--- a/BestFlightSearch.Solution/BestFlightSearch.Solution.csproj
+++ b/BestFlightSearch.Solution/BestFlightSearch.Solution.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FluentValidation, Version=8.0.0.0, Culture=neutral, PublicKeyToken=7de548da2fbae0f0, processorArchitecture=MSIL">
+      <HintPath>..\packages\FluentValidation.8.4.0\lib\net45\FluentValidation.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -38,6 +41,10 @@
       <HintPath>..\packages\RestSharp.106.6.10\lib\net452\RestSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Annotations, Version=4.2.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ComponentModel.Annotations.4.4.1\lib\net461\System.ComponentModel.Annotations.dll</HintPath>
+    </Reference>
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
@@ -51,22 +58,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entity\Airport.cs" />
+    <Compile Include="DomainNotification\Notification.cs" />
+    <Compile Include="DomainNotification\NotificationContext.cs" />
+    <Compile Include="Domain\Entities\Airport.cs" />
     <Compile Include="Connected Services\infraeroConsultaVoos\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
-    <Compile Include="Entity\Flight.cs" />
-    <Compile Include="Entity\Company.cs" />
-    <Compile Include="Enum\SkyScannerIOMethod.cs" />
-    <Compile Include="Enum\SkyScannerIOResponseCodes.cs" />
-    <Compile Include="Enum\SkyScannerRapidApiMethod.cs" />
+    <Compile Include="Domain\Entities\Entity.cs" />
+    <Compile Include="Domain\Entities\Flight.cs" />
+    <Compile Include="Domain\Entities\Company.cs" />
+    <Compile Include="Domain\Entities\Enum\SkyScannerIOMethod.cs" />
+    <Compile Include="Domain\Entities\Enum\SkyScannerIOResponseCodes.cs" />
+    <Compile Include="Domain\Entities\Enum\SkyScannerRapidApiMethod.cs" />
+    <Compile Include="Domain\Entities\Values\Audit.cs" />
+    <Compile Include="Domain\Validators\AirportValidator.cs" />
+    <Compile Include="Domain\Validators\CompanyValidator.cs" />
+    <Compile Include="Domain\Validators\FlightValidator.cs" />
     <Compile Include="FlightSearchInfraero.cs" />
     <Compile Include="FlightSearchRapidApiSkyScanner.cs" />
     <Compile Include="FlightSearchSkyScannerIO.cs" />
     <Compile Include="Interface\IFlightSearch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shared\Commands\ICommand.cs" />
+    <Compile Include="Shared\Commands\ICommandHandler.cs" />
+    <Compile Include="Shared\Commands\ICommandResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
